FIxed script for the latest installer.

--- a/Settings.ini
+++ b/Settings.ini
@@ -19,39 +19,39 @@ ReqPlatform =
 ; removed ("yes") or not ("no"). The default value is no.
 ;
 [default]
-Components = vcredist|vcredist2010|vcredist2013|DotNet6|Eloquence|fsSynth|UiaHooks|HookManager|fsWow64Proxy|Authorization|RDP|KeyboardManager|JAWS|JAWSLanguage|JAWSStart|PostInstall|AccEventCache|GlobalHooksDispatcher
+Components = vcredist|DotNet6|Eloquence|fsSynth|UiaHooks|HookManager|Authorization|RDP|KeyboardManager|JAWS|JAWSLanguage|JAWSStart|PostInstall|AccEventCache|GlobalHooksDispatcher
 
 [silent]
-Components = vcredist|vcredist2010|vcredist2013|DotNet6|Eloquence|FSVideoIntercept|VideoAccessibility|ClaireCompact|EllenCompact|OskarCompact|HenrikCompact|CarmitCompact|SamanthaCompact|SaraCompact|LailaCompact|MariskaCompact|MilenaCompact|OnniCompact|YeldaCompact|Utilities|SentinelSystemDriver|FsElevation|fsSynth|UiaHooks|HookManager|fsWow64Proxy|FSReader|TableOfContents|FSOmniPage|FSOmnipageAsian|FSOcr|FSOcrTombstone|ErrorReporting|TouchServer|Authorization|RDP|FusionInterface|FSCam|Telemetry|KeyboardManager|FSSupportTool|VoiceAssistant|JAWS|JAWSLanguage|JAWSStart|PostInstall|Xerces|AccEventCache|GlobalHooksDispatcher
+Components = vcredist|DotNet6|Eloquence|FSVideoIntercept|VideoAccessibility|ClaireCompact|EllenCompact|OskarCompact|HenrikCompact|CarmitCompact|SamanthaCompact|SaraCompact|LailaCompact|MariskaCompact|MilenaCompact|OnniCompact|YeldaCompact|Utilities|SentinelSystemDriver|FsElevation|fsSynth|UiaHooks|HookManager|FSReader|TableOfContents|FSOmniPage|FSOmnipageAsian|FSOcr|FSOcrTombstone|ErrorReporting|TouchServer|Authorization|RDP|FusionInterface|FSCam|Telemetry|KeyboardManager|FSSupportTool|VoiceAssistant|JAWS|JAWSLanguage|JAWSStart|PostInstall|Xerces|AccEventCache|GlobalHooksDispatcher|GateManager
 
 [repair]
-Components = vcredist|vcredist2010|vcredist2013|DotNet6|EloquenceRepair|FSVideoInterceptRepair|VideoAccessibilityRepair|ClaireCompactRepair|EllenCompactRepair|OskarCompactRepair|HenrikCompactRepair|CarmitCompactRepair|SamanthaCompactRepair|SaraCompactRepair|LailaCompactRepair|MariskaCompactRepair|MilenaCompactRepair|OnniCompactRepair|YeldaCompactRepair|UtilitiesRepair|SentinelSystemDriverRepair|JAWSRepair|JAWSLanguageRepair|JAWSStartRepair|FsElevationRepair|fsSynthRepair|UiaHooksRepair|HookManagerRepair|fsWow64ProxyRepair|FSReaderRepair|TableOfContentsRepair|FSOmniPage|FSOmnipageAsian|FSOcrRepair|ErrorReporting|TouchServerRepair|AuthorizationRepair|RDPRepair|RDPRepair|FusionInterfaceRepair|FSCamRepair|TelemetryRepair|KeyboardManagerRepair|FSSupportToolRepair|VoiceAssistantRepair|PostInstallRepair|XercesRepair|AccEventCacheRepair|GlobalHooksDispatcherRepair
+Components = vcredist|DotNet6|EloquenceRepair|FSVideoInterceptRepair|VideoAccessibilityRepair|ClaireCompactRepair|EllenCompactRepair|OskarCompactRepair|HenrikCompactRepair|CarmitCompactRepair|SamanthaCompactRepair|SaraCompactRepair|LailaCompactRepair|MariskaCompactRepair|MilenaCompactRepair|OnniCompactRepair|YeldaCompactRepair|UtilitiesRepair|SentinelSystemDriverRepair|JAWSRepair|JAWSLanguageRepair|JAWSStartRepair|FsElevationRepair|fsSynthRepair|UiaHooksRepair|HookManagerRepair|FSReaderRepair|TableOfContentsRepair|FSOmniPage|FSOmnipageAsian|FSOcrRepair|ErrorReporting|TouchServerRepair|AuthorizationRepair|RDPRepair|RDPRepair|FusionInterfaceRepair|FSCamRepair|TelemetryRepair|KeyboardManagerRepair|FSSupportToolRepair|VoiceAssistantRepair|PostInstallRepair|XercesRepair|AccEventCacheRepair|GlobalHooksDispatcherRepair|GateManagerRepair
 
 [silentrepair]
-Components = vcredist|vcredist2010|vcredist2013|DotNet6|EloquenceRepair|FSVideoInterceptRepair|VideoAccessibilityRepair|ClaireCompactRepair|EllenCompactRepair|OskarCompactRepair|HenrikCompactRepair|CarmitCompactRepair|SamanthaCompactRepair|SaraCompactRepair|LailaCompactRepair|MariskaCompactRepair|MilenaCompactRepair|OnniCompactRepair|YeldaCompactRepair|UtilitiesRepair|SentinelSystemDriverRepair|JAWSRepair|JAWSLanguageRepair|JAWSStartRepair|FsElevationRepair|fsSynthRepair|UiaHooksRepair|HookManagerRepair|fsWow64ProxyRepair|FSReaderRepair|TableOfContentsRepair|FSOmniPage|FSOmnipageAsian|FSOcrRepair|ErrorReporting|TouchServerRepair|AuthorizationRepair|RDPRepair|RDPRepair|FusionInterfaceRepair|FSCamRepair|TelemetryRepair|KeyboardManagerRepair|FSSupportToolRepair|VoiceAssistantRepair|PostInstallRepair|XercesRepair|AccEventCacheRepair|GlobalHooksDispatcherRepair
+Components = vcredist|DotNet6|EloquenceRepair|FSVideoInterceptRepair|VideoAccessibilityRepair|ClaireCompactRepair|EllenCompactRepair|OskarCompactRepair|HenrikCompactRepair|CarmitCompactRepair|SamanthaCompactRepair|SaraCompactRepair|LailaCompactRepair|MariskaCompactRepair|MilenaCompactRepair|OnniCompactRepair|YeldaCompactRepair|UtilitiesRepair|SentinelSystemDriverRepair|JAWSRepair|JAWSLanguageRepair|JAWSStartRepair|FsElevationRepair|fsSynthRepair|UiaHooksRepair|HookManagerRepair|FSReaderRepair|TableOfContentsRepair|FSOmniPage|FSOmnipageAsian|FSOcrRepair|ErrorReporting|TouchServerRepair|AuthorizationRepair|RDPRepair|RDPRepair|FusionInterfaceRepair|FSCamRepair|TelemetryRepair|KeyboardManagerRepair|FSSupportToolRepair|VoiceAssistantRepair|PostInstallRepair|XercesRepair|AccEventCacheRepair|GlobalHooksDispatcherRepair|GateManagerRepair
 
 [uninstall]
-Components = Eloquence|FSVideoIntercept|VideoAccessibility|FsTxtSvc|Utilities|FsElevation|fsSynth|UiaHooks|HookManager|fsWow64Proxy|FSOmniPage|FSOmnipageAsian|FSOcr|FSOcrTombstone|ErrorReporting|TouchServer|Authorization|RDP|FusionInterface|FSCam|Telemetry|KeyboardManager|FSSupportTool|VoiceAssistant|JAWS|JAWSLanguage|JAWSStart|PostInstall|Xerces|AccEventCache|GlobalHooksDispatcher
+Components = Eloquence|FSVideoIntercept|VideoAccessibility|FsTxtSvc|Utilities|FsElevation|fsSynth|UiaHooks|HookManager|FSOmniPage|FSOmnipageAsian|FSOcr|FSOcrTombstone|ErrorReporting|TouchServer|Authorization|RDP|FusionInterface|FSCam|Telemetry|KeyboardManager|FSSupportTool|VoiceAssistant|JAWS|JAWSLanguage|JAWSStart|PostInstall|Xerces|AccEventCache|GlobalHooksDispatcher|GateManager
 
 [silentuninstall]
 Components = JAWS|JAWSLanguage|JAWSStart|PostInstall|Xerces
 RemoveShared = no
 
 [silentshareduninstall]
-Components = Eloquence|FSVideoIntercept|VideoAccessibility|FsTxtSvc|Utilities|FsElevation|fsSynth|UiaHooks|HookManager|fsWow64Proxy|FSOmniPage|FSOmnipageAsian|FSOcr|FSOcrTombstone|ErrorReporting|TouchServer|Authorization|RDP|FusionInterface|FSCam|Telemetry|KeyboardManager|FSSupportTool|VoiceAssistant|JAWS|JAWSLanguage|JAWSStart|PostInstall|Xerces|AccEventCache|GlobalHooksDispatcher
+Components = Eloquence|FSVideoIntercept|VideoAccessibility|FsTxtSvc|Utilities|FsElevation|fsSynth|UiaHooks|HookManager|FSOmniPage|FSOmnipageAsian|FSOcr|FSOcrTombstone|ErrorReporting|TouchServer|Authorization|RDP|FusionInterface|FSCam|Telemetry|KeyboardManager|FSSupportTool|VoiceAssistant|JAWS|JAWSLanguage|JAWSStart|PostInstall|Xerces|AccEventCache|GlobalHooksDispatcher|GateManager
 RemoveShared = yes
 
 [remote]
-Components = vcredist|vcredist2010|vcredist2013|DotNet6|ClaireCompact|EllenCompact|OskarCompact|HenrikCompact|CarmitCompact|SamanthaCompact|SaraCompact|LailaCompact|MariskaCompact|MilenaCompact|OnniCompact|YeldaCompact|Eloquence|FSVideoIntercept|VideoAccessibility|Utilities|SentinelSystemDriver|FsElevation|fsSynth|UiaHooks|HookManager|fsWow64Proxy|FSReader|TableOfContents|FSOmniPage|FSOmnipageAsian|FSOcr|FSOcrTombstone|ErrorReporting|TouchServer|Authorization|RDP|FusionInterface|FSCam|Telemetry|KeyboardManager|FSSupportTool|VoiceAssistant|JAWSRemote|JAWSLanguage|JAWSStart|PostInstall|Xerces|AccEventCache|GlobalHooksDispatcher
+Components = vcredist|DotNet6|ClaireCompact|EllenCompact|OskarCompact|HenrikCompact|CarmitCompact|SamanthaCompact|SaraCompact|LailaCompact|MariskaCompact|MilenaCompact|OnniCompact|YeldaCompact|Eloquence|FSVideoIntercept|VideoAccessibility|Utilities|SentinelSystemDriver|FsElevation|fsSynth|UiaHooks|HookManager|FSReader|TableOfContents|FSOmniPage|FSOmnipageAsian|FSOcr|FSOcrTombstone|ErrorReporting|TouchServer|Authorization|RDP|FusionInterface|FSCam|Telemetry|KeyboardManager|FSSupportTool|VoiceAssistant|JAWSRemote|JAWSLanguage|JAWSStart|PostInstall|Xerces|AccEventCache|GlobalHooksDispatcher|GateManager
 
 [silentremote]
-Components = vcredist|vcredist2010|vcredist2013|DotNet6|ClaireCompact|EllenCompact|OskarCompact|HenrikCompact|CarmitCompact|SamanthaCompact|SaraCompact|LailaCompact|MariskaCompact|MilenaCompact|OnniCompact|YeldaCompact|Eloquence|FSVideoIntercept|VideoAccessibility|Utilities|SentinelSystemDriver|FsElevation|fsSynth|UiaHooks|HookManager|fsWow64Proxy|FSReader|TableOfContents|FSOmniPage|FSOmnipageAsian|FSOcr|FSOcrTombstone|ErrorReporting|TouchServer|Authorization|RDP|FusionInterface|FSCam|Telemetry|KeyboardManager|FSSupportTool|VoiceAssistant|JAWSRemote|JAWSLanguage|JAWSStart|PostInstall|Xerces|AccEventCache|GlobalHooksDispatcher
+Components = vcredist|DotNet6|ClaireCompact|EllenCompact|OskarCompact|HenrikCompact|CarmitCompact|SamanthaCompact|SaraCompact|LailaCompact|MariskaCompact|MilenaCompact|OnniCompact|YeldaCompact|Eloquence|FSVideoIntercept|VideoAccessibility|Utilities|SentinelSystemDriver|FsElevation|fsSynth|UiaHooks|HookManager|FSReader|TableOfContents|FSOmniPage|FSOmnipageAsian|FSOcr|FSOcrTombstone|ErrorReporting|TouchServer|Authorization|RDP|FusionInterface|FSCam|Telemetry|KeyboardManager|FSSupportTool|VoiceAssistant|JAWSRemote|JAWSLanguage|JAWSStart|PostInstall|Xerces|AccEventCache|GlobalHooksDispatcher|GateManager
 
 [safe]
-Components = vcredist|vcredist2010|vcredist2013|DotNet6|ClaireCompact|EllenCompact|OskarCompact|HenrikCompact|CarmitCompact|SamanthaCompact|SaraCompact|LailaCompact|MariskaCompact|MilenaCompact|OnniCompact|YeldaCompact|Eloquence|SentinelSystemDriver|fsSynth|UiaHooks|HookManager|fsWow64Proxy|FSReader|TableOfContents|FSOmniPage|FSOmnipageAsian|FSOcr|FSOcrTombstone|ErrorReporting|TouchServer|Authorization|RDP|FSCam|Telemetry|KeyboardManager|FSSupportTool|VoiceAssistant|JAWSSafe|JAWSLanguage|JAWSStart|Xerces|AccEventCache|GlobalHooksDispatcher
+Components = vcredist|DotNet6|ClaireCompact|EllenCompact|OskarCompact|HenrikCompact|CarmitCompact|SamanthaCompact|SaraCompact|LailaCompact|MariskaCompact|MilenaCompact|OnniCompact|YeldaCompact|Eloquence|SentinelSystemDriver|fsSynth|UiaHooks|HookManager|FSReader|TableOfContents|FSOmniPage|FSOmnipageAsian|FSOcr|FSOcrTombstone|ErrorReporting|TouchServer|Authorization|RDP|FSCam|Telemetry|KeyboardManager|FSSupportTool|VoiceAssistant|JAWSSafe|JAWSLanguage|JAWSStart|Xerces|AccEventCache|GlobalHooksDispatcher|GateManager
 
 [silentsafe]
-Components = vcredist|vcredist2010|vcredist2013|DotNet6|ClaireCompact|EllenCompact|OskarCompact|HenrikCompact|CarmitCompact|SamanthaCompact|SaraCompact|LailaCompact|MariskaCompact|MilenaCompact|OnniCompact|YeldaCompact|Eloquence|SentinelSystemDriver|fsSynth|UiaHooks|HookManager|fsWow64Proxy|FSReader|TableOfContents|FSOmniPage|FSOmnipageAsian|FSOcr|FSOcrTombstone|ErrorReporting|TouchServer|Authorization|RDP|FSCam|Telemetry|KeyboardManager|FSSupportTool|VoiceAssistant|JAWSSafe|JAWSLanguage|JAWSStart|Xerces|AccEventCache|GlobalHooksDispatcher
+Components = vcredist|DotNet6|ClaireCompact|EllenCompact|OskarCompact|HenrikCompact|CarmitCompact|SamanthaCompact|SaraCompact|LailaCompact|MariskaCompact|MilenaCompact|OnniCompact|YeldaCompact|Eloquence|SentinelSystemDriver|fsSynth|UiaHooks|HookManager|FSReader|TableOfContents|FSOmniPage|FSOmnipageAsian|FSOcr|FSOcrTombstone|ErrorReporting|TouchServer|Authorization|RDP|FSCam|Telemetry|KeyboardManager|FSSupportTool|VoiceAssistant|JAWSSafe|JAWSLanguage|JAWSStart|Xerces|AccEventCache|GlobalHooksDispatcher|GateManager
 
 ; Components
 ;
@@ -271,11 +271,11 @@ ComponentId = GlobalHooksDispatcher
 ComponentId = GlobalHooksDispatcher
 Reboot=DeferForce
 
-[fsWow64Proxy]
-ComponentId = fsWow64Proxy
+[GateManager]
+ComponentId = GateManager
 
-[fsWow64ProxyRepair]
-ComponentId = fsWow64Proxy
+[GateManagerRepair]
+ComponentId = GateManager
 Reboot=DeferForce
 
 [FSReader]
@@ -343,12 +343,6 @@ ComponentId = FSOmniPage
 
 [FSOmniPageAsian]
 ComponentId = FSOmniPageAsian
-
-[vcredist2010]
-ComponentId = vcredist2010
-
-[vcredist2013]
-ComponentId = vcredist2013
 
 [DotNet6]
 ComponentId = DotNet6
