--- a/.github/workflows/cron-job.yml
+++ b/.github/workflows/cron-job.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         cmp J20*.exe ./Installer.exe
         EXIT_CODE=$?
-        if [ $EXIT_CODE -eq 0 ]; then
+        if [ $EXIT_CODE == 0 ]; then
           rm J20*.exe
           echo "Installer file is already up-to-date."
           exit 0
